# Tracer

./: .gitignore  Cargo.toml  README.md
src/: main.rs  random.rs
src/materials/: dielectric.rs  emissivediffuse.rs  glossy.rs  lambertian.rs  material.rs  metal.rs  mod.rs  texture.rs
src/objects/: cube.rs  mod.rs  obj.rs  object.rs  plane.rs  rotated.rs  sphere.rs  triangle.rs
src/utils/: aabb.rs  bvh.rs  material.rs  mod.rs  sampling.rs
src/world/: camera.rs  hdri.rs  mod.rs  object.rs  physics.rs  world.rs
