[package]
name = "tracer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image="*"
arrayvec ="*"
glam="0.20.3"
rand="*"
indicatif="0.16.2"
rayon="*"
tobj = "3.2.0"

[profile.release]
opt-level = 3
panic = "abort"
# lto = true